@@ -1,5 +1,9 @@
 2008-12-26  Michiel Roos <michiel@netcreators.com>
 
+	* #10016 added file compat/class.ux_template.php (excuse me)
+
+2008-12-26  Michiel Roos <michiel@netcreators.com>
+
 	* Setting version to 1.1.0
 	* DAM now requires TYPO3 version 4.2.3 because of http://bugs.typo3.org/view.php?id=10016
 	* Updated manual (Setup DAM-Backend-Permissions (Backend-Users/Groups))
